<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckoutFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkout"
        android:textSize="40sp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:textColor="@color/teal_200"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orderList"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginTop="120dp"/>


    <Button
        android:id="@+id/nextBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:layout_marginTop="666dp"
        android:layout_marginStart="250dp"/>

    <Button
        android:id="@+id/previousBtn"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="666dp"
        android:text="@string/prev" />
</FrameLayout>